--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,9 @@
-<h1>Hello World!</h1>
+{% extends "base.html"%}
+
+{% block page_content%}
+<div class = "page-header">
+        <h1>Hello,World!</h1>
+</div>
+<p>本地时间为{{ moment(current_time).format('LLL') }}.</p>
+<p>距今:{{ moment(current_time).fromNow(refresh = True) }}</p>
+{% endblock %}
