--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,11 @@
 {% extends "base.html"%}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block page_content%}
 <div class = "page-header">
-        <h1>Hello,World!</h1>
+        <h1>Hello,{% if name %}{{name}} {% else %} Stranger {% endif %}!</h1>
 </div>
+{{ wtf.quick_form(form) }}
 <p>本地时间为{{ moment(current_time).format('LLL') }}.</p>
 <p>距今:{{ moment(current_time).fromNow(refresh = True) }}</p>
 {% endblock %}
