--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,11 @@
 {% block page_content%}
 <div class = "page-header">
         <h1>Hello,{% if name %}{{name}} {% else %} Stranger {% endif %}!</h1>
+        {% if known == False %}
+        <p>Pleased to meet you!</p>
+        {% else %}
+        <p>Happy to see you again!</p>
+        {% endif %}
 </div>
 {{ wtf.quick_form(form) }}
 <p>本地时间为{{ moment(current_time).format('LLL') }}.</p>
